<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.nagarro.remotelearning</groupId>
    <artifactId>RemoteLearning</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>Week1_p1</module>
        <module>Week1_p2</module>
        <module>Week1_p3</module>
        <module>Week1_p4</module>
        <module>Week1_p5</module>
        <module>Week2_p1</module>
        <module>Week2_p2</module>
        <module>Week2_p3</module>
        <module>Week3_p1</module>
        <module>Week3_p2</module>
        <module>Week3_p3</module>
        <module>Week4_p1</module>
        <module>Week4_p2</module>
        <module>Week4_p3</module>
        <module>Week4_p4</module>
        <module>Week4_p5</module>
        <module>Week4_p6</module>
        <module>Week5_p1</module>
        <module>Week5_p2</module>
        <module>Week5_p3</module>
        <module>Week6_p1</module>
        <module>Week6_p2</module>
        <module>Week7_p1</module>
        <module>Week7_p2</module>
        <module>Week7_p3</module>
        <module>Week7_p4</module>
        <module>Week9_p1</module>
        <module>Week9_p2</module>
        <module>Week9_p3</module>
    </modules>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>